--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "gulp": "NODE_ENV=\"${NODE_ENV:-development}\" babel-node --presets=env \"$(which gulp)\"",
     "serve": "firebase serve --only functions,hosting",
-    "webpack-dev-server": "NODE_ENV=\"development\" babel-node --presets=env \"$(which webpack-dev-server)\" --config webpack.config/public.js"
+    "webpack-dev-server": "NODE_ENV=development babel-node --presets=env \"$(which webpack-dev-server)\" --config webpack.config/public.js"
   },
   "repository": {
     "type": "git",
@@ -26,7 +26,7 @@
     "bootstrap": "^4.0.0-beta.2",
     "css-loader": "^0.28.7",
     "del": "^3.0.0",
-    "element-ui": "^1.4.8",
+    "element-ui": "^2.0.0-beta.1",
     "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.5",
     "firebase-tools": "^3.13.1",
