--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "bootstrap": "^4.0.0-beta.2",
     "css-loader": "^0.28.7",
     "del": "^3.0.0",
-    "element-ui": "^2.0.0-beta.1",
-    "extract-text-webpack-plugin": "^3.0.1",
+    "element-ui": "^2.0.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "firebase-tools": "^3.13.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
@@ -36,7 +36,7 @@
     "gulp": "gulpjs/gulp#4.0",
     "gulp-cli": "^1.4.0",
     "html-webpack-plugin": "^2.30.1",
-    "html-webpack-template": "^5.6.0",
+    "html-webpack-template": "^5.6.2",
     "jquery": "^3.2.1",
     "moment": "^2.19.1",
     "node-sass": "^4.5.3",
