--- a/functions/package.json
+++ b/functions/package.json
@@ -3,6 +3,8 @@
   "description": "Cloud Functions for Firebase",
   "dependencies": {
     "apollo-server-express": "^1.2.0",
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "firebase-admin": "^5.4.3",
     "firebase-functions": "^0.7.1",
