--- a/functions/package.json
+++ b/functions/package.json
@@ -4,12 +4,13 @@
   "dependencies": {
     "apollo-server-express": "^1.2.0",
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "firebase-admin": "^5.4.3",
-    "firebase-functions": "^0.7.1",
+    "firebase-functions": "^0.7.2",
     "graphql": "^0.11.7",
-    "graphql-tools": "^2.6.1"
+    "graphql-tools": "^2.7.0"
   },
   "private": true
 }
