--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "stefanwimmer128.eu",
   "scripts": {
-    "gulp": "NODE_ENV=\"${NODE_ENV:-development}\" babel-node --presets=@babel/preset-env \"$(which gulp)\"",
+    "gulp": "NODE_ENV=\"${NODE_ENV:-development}\" babel-node \"$(which gulp)\"",
     "serve": "firebase serve --only functions,hosting",
-    "webpack-dev-server": "NODE_ENV=development babel-node --presets=@babel/preset-env \"$(which webpack-dev-server)\" --config webpack.config/public.js"
+    "webpack-dev-server": "NODE_ENV=development babel-node \"$(which webpack-dev-server)\" --config webpack.config/public.js"
   },
   "repository": {
     "type": "git",
@@ -20,13 +20,16 @@
     "@babel/node": "^7.0.0-beta.32",
     "@babel/polyfill": "^7.0.0-beta.32",
     "@babel/preset-env": "^7.0.0-beta.32",
-    "apollo-client": "^1.9.3",
+    "apollo-cache-inmemory": "^1.1.1",
+    "apollo-client": "^2.0.3",
+    "apollo-link": "^1.0.4",
+    "apollo-link-http": "^1.3.0",
     "babel-loader": "^8.0.0-beta.0",
     "bootstrap": "^4.0.0-beta.2",
     "css-loader": "^0.28.7",
     "del": "^3.0.0",
-    "element-theme-chalk": "^2.0.5",
-    "element-ui": "^2.0.5",
+    "element-theme-chalk": "^2.0.7",
+    "element-ui": "^2.0.7",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "firebase-tools": "^3.15.3",
@@ -38,7 +41,7 @@
     "html-webpack-plugin": "^2.30.1",
     "html-webpack-template": "^5.6.2",
     "jquery": "^3.2.1",
-    "moment": "^2.19.2",
+    "moment": "^2.19.3",
     "node-sass": "^4.7.2",
     "popper.js": "^1.12.9",
     "pug": "^2.0.0-rc.4",
@@ -47,14 +50,14 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "vue": "^2.5.2",
-    "vue-apollo": "^2.1.0-rc.8",
+    "vue-apollo": "^3.0.0-alpha.2",
     "vue-loader": "^13.5.0",
     "vue-router": "^3.0.1",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.9",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0",
-    "webpack": "^3.8.1",
+    "webpack": "^3.9.0",
     "webpack-dev-server": "^2.9.5",
     "webpack-promise": "^1.2.0"
   }
