--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "apollo-client": "^2.0.3",
     "apollo-link": "^1.0.4",
     "apollo-link-http": "^1.3.0",
+    "autoprefixer": "^7.1.6",
     "babel-loader": "^8.0.0-beta.0",
     "bootstrap": "^4.0.0-beta.2",
     "css-loader": "^0.28.7",
@@ -44,6 +45,7 @@
     "moment": "^2.19.3",
     "node-sass": "^4.7.2",
     "popper.js": "^1.12.9",
+    "postcss-loader": "^2.0.9",
     "pug": "^2.0.0-rc.4",
     "raw-loader": "^0.5.1",
     "remarkable": "^1.7.1",
