--- a/functions/package.json
+++ b/functions/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "functions",
+  "name": "stefanwimmer128.eu-functions",
   "dependencies": {
+    "@babel/polyfill": "^7.0.0-beta.34",
     "apollo-server-express": "^1.2.0",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
@@ -8,7 +9,7 @@
     "firebase-admin": "^5.5.1",
     "firebase-functions": "^0.7.3",
     "graphql": "^0.11.7",
-    "graphql-tools": "^2.10.0"
+    "graphql-tools": "^2.12.0"
   },
   "private": true
 }
