--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "stefanwimmer128.eu",
+  "description": "Source code for stefanwimmer128.eu",
   "scripts": {
-    "gulp": "NODE_ENV=\"${NODE_ENV:-development}\" babel-node \"$(which gulp)\"",
-    "serve": "firebase serve --only functions,hosting",
-    "webpack-dev-server": "NODE_ENV=development babel-node \"$(which webpack-dev-server)\" --config webpack.config/public.js"
+    "babel-node": "babel-node --presets=@babel/preset-env",
+    "build": "yarn run build-server && yarn run build-client",
+    "build-client": "yarn run webpack --config webpack/client.js",
+    "build-server": "yarn run webpack --config webpack/server.js",
+    "deploy": "firebase deploy",
+    "serve": "firebase serve",
+    "webpack": "NODE_ENV=\"${NODE_ENV:-development}\" yarn run babel-node \"$(which webpack-cli)\"",
+    "webpack-dev-server": "NODE_ENV=development yarn run babel-node \"$(which webpack-dev-server)\""
   },
   "repository": {
     "type": "git",
@@ -16,51 +22,51 @@
   },
   "homepage": "https://stefanwimmer128.eu/",
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.35",
-    "@babel/node": "^7.0.0-beta.35",
-    "@babel/polyfill": "^7.0.0-beta.35",
-    "@babel/preset-env": "^7.0.0-beta.35",
-    "apollo-cache-inmemory": "^1.1.4",
-    "apollo-client": "^2.1.0",
-    "apollo-link": "^1.0.7",
-    "apollo-link-http": "^1.3.2",
-    "autoprefixer": "^7.2.3",
-    "babel-loader": "^8.0.0-beta.0",
-    "bootstrap": "^4.0.0-beta.2",
-    "css-loader": "^0.28.7",
-    "del": "^3.0.0",
-    "element-theme-chalk": "^2.0.8",
-    "element-ui": "^2.0.8",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
-    "firebase-tools": "^3.16.0",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "graphql": "^0.12.3",
-    "graphql-tag": "^2.6.1",
-    "gulp": "gulpjs/gulp#4.0",
-    "gulp-cli": "^2.0.0",
-    "html-webpack-plugin": "^2.30.1",
-    "html-webpack-template": "^6.1.0",
-    "jquery": "^3.2.1",
-    "moment": "^2.20.1",
-    "node-sass": "^4.7.2",
-    "popper.js": "^1.13.0",
-    "postcss-loader": "^2.0.9",
-    "pug": "^2.0.0-rc.4",
+    "@babel/core": "^7.0.0-beta.44",
+    "@babel/node": "^7.0.0-beta.44",
+    "@babel/polyfill": "^7.0.0-beta.44",
+    "@babel/preset-env": "^7.0.0-beta.44",
+    "@babel/preset-stage-0": "^7.0.0-beta.44",
+    "apollo-cache-inmemory": "^1.1.12",
+    "apollo-client": "^2.2.8",
+    "apollo-link": "^1.2.2",
+    "apollo-link-http": "^1.5.4",
+    "autoprefixer": "^8.3.0",
+    "babel-loader": "^8.0.0-beta.2",
+    "bootstrap": "^4.1.0",
+    "clean-webpack-plugin": "^0.1.19",
+    "core-js": "^2.5.5",
+    "css-loader": "^0.28.11",
+    "element-theme-chalk": "^2.3.5",
+    "element-ui": "^2.3.5",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
+    "firebase-tools": "^3.18.4",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.1",
+    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-template": "^6.2.0",
+    "jquery": "^3.3.1",
+    "moment": "^2.22.1",
+    "node-sass": "^4.8.3",
+    "popper.js": "^1.14.3",
+    "postcss-loader": "^2.1.4",
+    "pug": "^2.0.3",
     "raw-loader": "^0.5.1",
     "remarkable": "^1.7.1",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.1",
-    "vue": "^2.5.13",
-    "vue-apollo": "^3.0.0-alpha.3",
-    "vue-loader": "^13.6.1",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
+    "vue": "^2.5.16",
+    "vue-apollo": "^3.0.0-beta.5",
+    "vue-loader": "^14.2.2",
     "vue-router": "^3.0.1",
-    "vue-style-loader": "^3.0.3",
-    "vue-template-compiler": "^2.5.13",
+    "vue-style-loader": "^4.1.0",
+    "vue-template-compiler": "^2.5.16",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7",
-    "webpack-promise": "^1.2.0"
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3"
   }
 }
