GraphQL for VSCode

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/polyfill": "^7.0.0-beta.44",
     "@babel/preset-env": "^7.0.0-beta.44",
     "@babel/preset-stage-0": "^7.0.0-beta.44",
+    "@playlyfe/gql": "^2.6.0",
     "apollo-cache-inmemory": "^1.1.12",
     "apollo-client": "^2.2.8",
     "apollo-link": "^1.2.2",
@@ -35,7 +36,6 @@
     "babel-loader": "^8.0.0-beta.2",
     "bootstrap": "^4.1.0",
     "clean-webpack-plugin": "^0.1.19",
-    "core-js": "^2.5.5",
     "css-loader": "^0.28.11",
     "element-theme-chalk": "^2.3.5",
     "element-ui": "^2.3.5",
