--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "css-loader": "^0.28.11",
     "element-theme-chalk": "^2.3.5",
     "element-ui": "^2.3.5",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "firebase-tools": "^3.18.4",
     "friendly-errors-webpack-plugin": "^1.7.0",
@@ -46,6 +45,7 @@
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
     "jquery": "^3.3.1",
+    "mini-css-extract-plugin": "^0.4.0",
     "moment": "^2.22.1",
     "node-sass": "^4.8.3",
     "popper.js": "^1.14.3",
