--- a/package.json
+++ b/package.json
@@ -47,17 +47,18 @@
     "jquery": "^3.3.1",
     "mini-css-extract-plugin": "^0.4.0",
     "moment": "^2.22.1",
-    "node-sass": "^4.8.3",
+    "node-sass": "^4.9.0",
     "popper.js": "^1.14.3",
     "postcss-loader": "^2.1.4",
     "pug": "^2.0.3",
+    "pug-plain-loader": "^1.0.0",
     "raw-loader": "^0.5.1",
     "remarkable": "^1.7.1",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "vue": "^2.5.16",
     "vue-apollo": "^3.0.0-beta.5",
-    "vue-loader": "^14.2.2",
+    "vue-loader": "^15.0.1",
     "vue-router": "^3.0.1",
     "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.16",
@@ -65,6 +66,7 @@
     "vuex-router-sync": "^5.0.0",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15",
-    "webpack-dev-server": "^3.1.3"
+    "webpack-dev-server": "^3.1.3",
+    "webpack-node-externals": "^1.7.2"
   }
 }
