--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "apollo-client": "^2.2.8",
     "apollo-link": "^1.2.2",
     "apollo-link-http": "^1.5.4",
-    "autoprefixer": "^8.3.0",
+    "autoprefixer": "^8.4.1",
     "babel-loader": "^8.0.0-beta.2",
     "bootstrap": "^4.1.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
-    "element-theme-chalk": "^2.3.6",
-    "element-ui": "^2.3.6",
+    "element-theme-chalk": "^2.3.7",
+    "element-ui": "^2.3.7",
     "file-loader": "^1.1.11",
     "firebase-tools": "^3.18.4",
     "friendly-errors-webpack-plugin": "^1.7.0",
@@ -58,7 +58,7 @@
     "style-loader": "^0.21.0",
     "vue": "^2.5.16",
     "vue-apollo": "^3.0.0-beta.5",
-    "vue-loader": "^15.0.1",
+    "vue-loader": "^15.0.4",
     "vue-router": "^3.0.1",
     "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.16",
@@ -67,6 +67,7 @@
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15",
     "webpack-dev-server": "^3.1.3",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "whatwg-fetch": "^2.0.4"
   }
 }
