--- a/functions/package.json
+++ b/functions/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "@babel/polyfill": "^7.0.0-beta.46",
     "apollo-server-express": "^1.3.6",
     "body-parser": "^1.18.2",
+    "core-js": "^2.5.5",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "firebase-admin": "^5.12.0",
