--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-loader": "^8.0.0-beta.2",
     "bootstrap": "^4.1.0",
     "clean-webpack-plugin": "^0.1.19",
+    "core-js": "^2.5.5",
     "css-loader": "^0.28.11",
     "element-theme-chalk": "^2.3.7",
     "element-ui": "^2.3.7",
