--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
     "@babel/preset-env": "^7.0.0-beta.46",
     "@babel/preset-stage-0": "^7.0.0-beta.46",
     "@playlyfe/gql": "^2.6.0",
-    "apollo-cache-inmemory": "^1.1.12",
-    "apollo-client": "^2.2.8",
+    "apollo-cache-inmemory": "^1.2.1",
+    "apollo-client": "^2.3.1",
     "apollo-link": "^1.2.2",
     "apollo-link-http": "^1.5.4",
     "autoprefixer": "^8.4.1",
     "babel-loader": "^8.0.0-beta.2",
-    "bootstrap": "^4.1.0",
+    "bootstrap": "^4.1.1",
     "clean-webpack-plugin": "^0.1.19",
-    "core-js": "^2.5.5",
+    "core-js": "^2.5.6",
     "css-loader": "^0.28.11",
     "element-theme-chalk": "^2.3.7",
     "element-ui": "^2.3.7",
@@ -42,7 +42,7 @@
     "firebase-tools": "^3.18.4",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "graphql": "^0.13.2",
-    "graphql-tag": "^2.9.1",
+    "graphql-tag": "^2.9.2",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
     "jquery": "^3.3.1",
@@ -50,7 +50,7 @@
     "moment": "^2.22.1",
     "node-sass": "^4.9.0",
     "popper.js": "^1.14.3",
-    "postcss-loader": "^2.1.4",
+    "postcss-loader": "^2.1.5",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "raw-loader": "^0.5.1",
@@ -58,16 +58,16 @@
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "vue": "^2.5.16",
-    "vue-apollo": "^3.0.0-beta.5",
-    "vue-loader": "^15.0.4",
+    "vue-apollo": "3.0.0-beta.5",
+    "vue-loader": "^15.0.9",
     "vue-router": "^3.0.1",
     "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.16",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.15",
-    "webpack-dev-server": "^3.1.3",
+    "webpack": "^4.8.1",
+    "webpack-cli": "^2.1.3",
+    "webpack-dev-server": "^3.1.4",
     "webpack-node-externals": "^1.7.2",
     "whatwg-fetch": "^2.0.4"
   }
