--- a/functions/package.json
+++ b/functions/package.json
@@ -1,15 +1,14 @@
 {
   "dependencies": {
-    "@babel/polyfill": "^7.0.0-beta.46",
+    "@babel/runtime": "^7.0.0-beta.51",
     "apollo-server-express": "^1.3.6",
-    "body-parser": "^1.18.2",
-    "core-js": "^2.5.6",
+    "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
-    "firebase-admin": "^5.12.0",
-    "firebase-functions": "^1.0.2",
+    "firebase-admin": "^5.12.1",
+    "firebase-functions": "^1.0.4",
     "graphql": "^0.13.2",
-    "graphql-tools": "^3.0.1"
+    "graphql-tools": "^3.0.2"
   },
   "private": true
 }
