--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "description": "Source code for stefanwimmer128.eu",
   "scripts": {
     "build": "yarn build-server && yarn build-client",
-    "build-client": "NODE_ENV=\"${NODE_ENV:-development}\" webpack-cli --config webpack/client.js",
-    "build-server": "NODE_ENV=\"${NODE_ENV:-development}\" webpack-cli --config webpack/server.js",
+    "build-client": "NODE_ENV=\"${NODE_ENV:-development}\" webpack-cli",
+    "build-server": "NODE_ENV=\"${NODE_ENV:-development}\" rollup -c",
     "deploy": "firebase deploy",
-    "dev-server": "NODE_ENV=development webpack-dev-server --config webpack/client.js",
+    "dev-server": "NODE_ENV=development webpack-dev-server",
     "serve": "firebase serve"
   },
   "repository": {
@@ -20,52 +20,58 @@
   },
   "homepage": "https://stefanwimmer128.eu/",
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.51",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.51",
-    "@babel/polyfill": "^7.0.0-beta.51",
-    "@babel/preset-env": "^7.0.0-beta.51",
-    "@babel/preset-stage-0": "^7.0.0-beta.51",
-    "@babel/runtime": "^7.0.0-beta.51",
+    "@babel/core": "^7.0.0-beta.54",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.54",
+    "@babel/polyfill": "^7.0.0-beta.54",
+    "@babel/preset-env": "^7.0.0-beta.54",
+    "@babel/preset-stage-0": "^7.0.0-beta.54",
+    "@babel/runtime": "^7.0.0-beta.54",
     "@playlyfe/gql": "^2.6.0",
-    "apollo-cache-inmemory": "^1.2.4",
-    "apollo-client": "^2.3.4",
+    "@yelo/rollup-node-external": "^1.0.1",
+    "apollo-cache-inmemory": "^1.2.5",
+    "apollo-client": "^2.3.5",
     "apollo-link": "^1.2.2",
     "apollo-link-http": "^1.5.4",
-    "autoprefixer": "^8.6.3",
-    "babel-loader": "^8.0.0-beta.3",
-    "bootstrap": "^4.1.1",
+    "autoprefixer": "^9.0.0",
+    "babel-loader": "^8.0.0-beta.4",
+    "bootstrap": "^4.1.2",
     "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^0.28.11",
-    "element-theme-chalk": "^2.4.1",
-    "element-ui": "^2.4.1",
+    "css-loader": "^1.0.0",
+    "element-theme-chalk": "^2.4.4",
+    "element-ui": "^2.4.4",
     "file-loader": "^1.1.11",
-    "firebase-tools": "^3.18.6",
+    "firebase-tools": "^3.19.3",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
     "jquery": "^3.3.1",
-    "mini-css-extract-plugin": "^0.4.0",
+    "mini-css-extract-plugin": "^0.4.1",
     "moment": "^2.22.2",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.9.2",
     "popper.js": "^1.14.3",
-    "postcss-loader": "^2.1.5",
+    "postcss-loader": "^2.1.6",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "raw-loader": "^0.5.1",
     "remarkable": "^1.7.1",
+    "rollup": "^0.62.0",
+    "rollup-plugin-babel": "^4.0.0-beta.7",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-string": "^2.0.2",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "vue": "^2.5.16",
     "vue-apollo": "3.0.0-beta.19",
-    "vue-loader": "^15.2.4",
+    "vue-loader": "^15.2.5",
     "vue-router": "^3.0.1",
     "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.16",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0",
-    "webpack": "^4.12.0",
+    "webpack": "^4.16.1",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4",
     "webpack-node-externals": "^1.7.2",
