--- a/functions/package.json
+++ b/functions/package.json
@@ -1,15 +1,15 @@
 {
+  "private": true,
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.54",
-    "apollo-server-express": "^1.4.0",
-    "body-parser": "^1.18.3",
-    "cors": "^2.8.4",
-    "express": "^4.16.3",
-    "firebase-admin": "^5.12.1",
-    "firebase-functions": "^1.1.0",
-    "graphql": "^0.13.2",
-    "graphql-tools": "^3.0.2",
-    "source-map-support": "^0.5.6"
+    "@babel/runtime": "7.3.1",
+    "apollo-server-express": "2.3.3",
+    "express": "4.16.4",
+    "firebase-admin": "7.0.0",
+    "firebase-functions": "2.2.0",
+    "graphql": "14.1.1",
+    "source-map-support": "0.5.10"
   },
-  "private": true
+  "engine": {
+    "node": "8"
+  }
 }
