--- a/package.json
+++ b/package.json
@@ -9,26 +9,27 @@
     "deploy": "firebase deploy"
   },
   "devDependencies": {
-    "@babel/core": "7.2.2",
+    "@babel/core": "7.3.4",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/plugin-transform-runtime": "7.2.0",
+    "@babel/plugin-transform-runtime": "7.3.4",
     "@babel/polyfill": "7.2.5",
-    "@babel/preset-env": "7.3.1",
+    "@babel/preset-env": "7.3.4",
     "@babel/register": "7.0.0",
-    "@babel/runtime": "7.3.1",
+    "@babel/runtime": "7.3.4",
     "@playlyfe/gql": "2.6.1",
+    "@starptech/prettyhtml": "0.8.16",
     "@yelo/rollup-node-external": "1.0.1",
-    "autoprefixer": "9.4.7",
-    "apollo-boost": "0.1.27",
+    "apollo-boost": "0.3.1",
+    "autoprefixer": "9.4.10",
     "babel-loader": "8.0.5",
-    "bootstrap": "4.2.1",
-    "clean-webpack-plugin": "1.0.1",
+    "bootstrap": "4.3.1",
+    "clean-webpack-plugin": "2.0.0",
     "css-loader": "2.1.0",
-    "element-theme-chalk": "2.5.4",
-    "element-ui": "2.5.4",
-    "extract-css-chunks-webpack-plugin": "3.3.2",
+    "element-theme-chalk": "2.6.1",
+    "element-ui": "2.6.1",
+    "extract-css-chunks-webpack-plugin": "4.0.0",
     "file-loader": "3.0.1",
-    "firebase-tools": "6.3.1",
+    "firebase-tools": "6.4.0",
     "friendly-errors-webpack-plugin": "1.7.0",
     "graphql": "14.1.1",
     "graphql-tag": "2.10.1",
@@ -37,31 +38,31 @@
     "jquery": "3.3.1",
     "moment": "2.24.0",
     "node-sass": "4.11.0",
-    "nodemon": "1.18.9",
+    "nodemon": "1.18.10",
     "popper.js": "1.14.7",
     "postcss-loader": "3.0.0",
     "prerender-spa-plugin": "3.4.0",
     "pug": "2.0.3",
     "pug-plain-loader": "1.0.0",
-    "rollup": "1.1.2",
+    "rollup": "1.4.1",
     "rollup-plugin-babel": "4.3.2",
-    "rollup-plugin-node-resolve": "4.0.0",
+    "rollup-plugin-node-resolve": "4.0.1",
     "rollup-plugin-progress": "1.0.0",
-    "rollup-plugin-string": "2.0.2",
+    "rollup-plugin-string": "3.0.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "subscriptions-transport-ws": "0.9.15",
     "terser-webpack-plugin": "1.2.2",
-    "vue": "2.6.0",
-    "vue-apollo": "3.0.0-beta.27",
-    "vue-loader": "15.6.2",
+    "vue": "2.6.8",
+    "vue-apollo": "3.0.0-beta.28",
+    "vue-loader": "15.7.0",
     "vue-router": "3.0.2",
-    "vue-template-compiler": "2.6.0",
+    "vue-template-compiler": "2.6.8",
     "vuex": "3.1.0",
     "vuex-router-sync": "5.0.0",
-    "webpack": "4.29.1",
-    "webpack-cli": "3.2.1",
-    "webpack-dev-server": "3.1.14",
+    "webpack": "4.29.6",
+    "webpack-cli": "3.2.3",
+    "webpack-dev-server": "3.2.1",
     "whatwg-fetch": "3.0.0"
   }
 }
