--- a/package.json
+++ b/package.json
@@ -9,60 +9,69 @@
     "deploy": "firebase deploy"
   },
   "devDependencies": {
-    "@babel/core": "7.3.4",
+    "@babel/core": "7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-decorators": "^7.4.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/plugin-transform-runtime": "7.3.4",
-    "@babel/polyfill": "7.2.5",
-    "@babel/preset-env": "7.3.4",
-    "@babel/register": "7.0.0",
-    "@babel/runtime": "7.3.4",
+    "@babel/plugin-transform-runtime": "7.4.3",
+    "@babel/polyfill": "7.4.3",
+    "@babel/preset-env": "7.4.3",
+    "@babel/preset-typescript": "^7.3.3",
+    "@babel/register": "7.4.0",
+    "@babel/runtime": "7.4.3",
     "@playlyfe/gql": "2.6.1",
-    "@starptech/prettyhtml": "0.8.16",
+    "@starptech/prettyhtml": "0.8.17",
     "@yelo/rollup-node-external": "1.0.1",
     "apollo-boost": "0.3.1",
-    "autoprefixer": "9.4.10",
+    "apollo-client": "^2.5.1",
+    "autoprefixer": "9.5.1",
     "babel-loader": "8.0.5",
     "bootstrap": "4.3.1",
-    "clean-webpack-plugin": "2.0.0",
+    "clean-webpack-plugin": "2.0.1",
     "css-loader": "2.1.1",
-    "element-theme-chalk": "2.6.1",
-    "element-ui": "2.6.1",
-    "extract-css-chunks-webpack-plugin": "4.0.0",
+    "element-theme-chalk": "2.7.2",
+    "element-ui": "2.7.2",
+    "extract-css-chunks-webpack-plugin": "4.3.0",
     "file-loader": "3.0.1",
-    "firebase-tools": "6.4.0",
+    "firebase-tools": "6.6.0",
     "friendly-errors-webpack-plugin": "1.7.0",
-    "graphql": "14.1.1",
+    "graphql": "14.2.1",
     "graphql-tag": "2.10.1",
     "html-webpack-plugin": "3.2.0",
     "html-webpack-template": "6.2.0",
-    "jquery": "3.3.1",
+    "jquery": "3.4.0",
     "moment": "2.24.0",
     "node-sass": "4.11.0",
-    "nodemon": "1.18.10",
-    "popper.js": "1.14.7",
+    "nodemon": "1.18.11",
+    "popper.js": "1.15.0",
     "postcss-loader": "3.0.0",
     "prerender-spa-plugin": "3.4.0",
     "pug": "2.0.3",
     "pug-plain-loader": "1.0.0",
-    "rollup": "1.6.0",
+    "rollup": "1.10.0",
     "rollup-plugin-babel": "4.3.2",
-    "rollup-plugin-node-resolve": "4.0.1",
-    "rollup-plugin-progress": "1.0.0",
+    "rollup-plugin-node-resolve": "4.2.3",
+    "rollup-plugin-progress": "1.1.1",
     "rollup-plugin-string": "3.0.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
-    "subscriptions-transport-ws": "0.9.15",
+    "subscriptions-transport-ws": "0.9.16",
     "terser-webpack-plugin": "1.2.2",
-    "vue": "2.6.8",
+    "typescript": "^3.4.3",
+    "vue": "2.6.10",
     "vue-apollo": "3.0.0-beta.28",
+    "vue-class-component": "^7.0.2",
     "vue-loader": "15.7.0",
-    "vue-router": "3.0.2",
-    "vue-template-compiler": "2.6.8",
+    "vue-property-decorator": "^8.1.0",
+    "vue-router": "3.0.3",
+    "vue-template-compiler": "2.6.10",
     "vuex": "3.1.0",
+    "vuex-class": "^0.3.2",
     "vuex-router-sync": "5.0.0",
     "webpack": "4.29.6",
-    "webpack-cli": "3.2.3",
-    "webpack-dev-server": "3.2.1",
+    "webpack-cli": "3.3.0",
+    "webpack-dev-server": "3.3.1",
     "whatwg-fetch": "3.0.0"
   }
 }
