--- a/package.json
+++ b/package.json
@@ -10,29 +10,30 @@
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/plugin-proposal-decorators": "^7.4.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "7.4.0",
+    "@babel/plugin-proposal-decorators": "7.4.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.4.3",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-transform-runtime": "7.4.3",
-    "@babel/polyfill": "7.4.3",
     "@babel/preset-env": "7.4.3",
-    "@babel/preset-typescript": "^7.3.3",
+    "@babel/preset-typescript": "7.3.3",
     "@babel/register": "7.4.0",
     "@babel/runtime": "7.4.3",
     "@playlyfe/gql": "2.6.1",
     "@starptech/prettyhtml": "0.8.17",
+    "@types/marked": "0.6.5",
     "@yelo/rollup-node-external": "1.0.1",
     "apollo-boost": "0.3.1",
-    "apollo-client": "^2.5.1",
+    "apollo-client": "2.5.1",
     "autoprefixer": "9.5.1",
     "babel-loader": "8.0.5",
     "bootstrap": "4.3.1",
     "clean-webpack-plugin": "2.0.1",
+    "core-js": "3.0.1",
     "css-loader": "2.1.1",
     "element-theme-chalk": "2.7.2",
     "element-ui": "2.7.2",
-    "extract-css-chunks-webpack-plugin": "4.3.0",
+    "extract-css-chunks-webpack-plugin": "4.3.1",
     "file-loader": "3.0.1",
     "firebase-tools": "6.6.0",
     "friendly-errors-webpack-plugin": "1.7.0",
@@ -41,6 +42,7 @@
     "html-webpack-plugin": "3.2.0",
     "html-webpack-template": "6.2.0",
     "jquery": "3.4.0",
+    "marked": "0.6.2",
     "moment": "2.24.0",
     "node-sass": "4.11.0",
     "nodemon": "1.18.11",
@@ -57,19 +59,19 @@
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "subscriptions-transport-ws": "0.9.16",
-    "terser-webpack-plugin": "1.2.2",
-    "typescript": "^3.4.3",
+    "terser-webpack-plugin": "1.2.3",
+    "typescript": "3.4.3",
     "vue": "2.6.10",
     "vue-apollo": "3.0.0-beta.28",
-    "vue-class-component": "^7.0.2",
+    "vue-class-component": "7.0.2",
     "vue-loader": "15.7.0",
-    "vue-property-decorator": "^8.1.0",
-    "vue-router": "3.0.3",
+    "vue-property-decorator": "8.1.0",
+    "vue-router": "3.0.5",
     "vue-template-compiler": "2.6.10",
     "vuex": "3.1.0",
-    "vuex-class": "^0.3.2",
+    "vuex-class": "0.3.2",
     "vuex-router-sync": "5.0.0",
-    "webpack": "4.29.6",
+    "webpack": "4.30.0",
     "webpack-cli": "3.3.0",
     "webpack-dev-server": "3.3.1",
     "whatwg-fetch": "3.0.0"
