--- a/functions/package.json
+++ b/functions/package.json
@@ -1,15 +1,18 @@
 {
   "private": true,
   "dependencies": {
-    "@babel/runtime": "7.4.3",
-    "apollo-server-express": "2.4.8",
+    "@babel/runtime": "7.4.5",
+    "apollo-server-express": "2.5.0",
     "express": "4.16.4",
-    "firebase-admin": "7.2.0",
-    "firebase-functions": "2.2.1",
-    "graphql": "14.2.1",
+    "firebase-admin": "8.0.0",
+    "firebase-functions": "2.3.1",
+    "graphql": "14.3.1",
     "source-map-support": "0.5.12"
   },
   "engines": {
     "node": "8"
+  },
+  "devDependencies": {
+    "firebase-functions-test": "0.1.6"
   }
 }
