--- a/package.json
+++ b/package.json
@@ -1,80 +1,16 @@
 {
   "private": true,
-  "main": "./build",
+  "name": "stefanwimmer128.eu",
+  "version": "0.0.0",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "dev-server": "webpack-dev-server --progress",
-    "build:server": "rollup -c",
-    "build:client": "webpack --progress",
-    "build": "rollup -c && webpack --progress",
-    "deploy": "firebase deploy"
+    "serve": "firebase serve --host 0.0.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.4.5",
-    "@babel/plugin-proposal-class-properties": "7.4.4",
-    "@babel/plugin-proposal-decorators": "7.4.4",
-    "@babel/plugin-proposal-object-rest-spread": "7.4.4",
-    "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/plugin-transform-runtime": "7.4.4",
-    "@babel/preset-env": "7.4.5",
-    "@babel/preset-typescript": "7.3.3",
-    "@babel/register": "7.4.4",
-    "@babel/runtime": "7.4.5",
     "@playlyfe/gql": "2.6.1",
-    "@starptech/prettyhtml": "0.9.0",
-    "@types/marked": "0.6.5",
-    "@yelo/rollup-node-external": "1.0.1",
-    "apollo-boost": "0.4.0",
-    "apollo-client": "2.6.0",
-    "autoprefixer": "9.5.1",
-    "babel-loader": "8.0.6",
-    "bootstrap": "4.3.1",
-    "clean-webpack-plugin": "2.0.2",
-    "core-js": "3.0.1",
-    "css-loader": "2.1.1",
-    "element-theme-chalk": "2.8.2",
-    "element-ui": "2.8.2",
-    "extract-css-chunks-webpack-plugin": "4.5.1",
-    "file-loader": "3.0.1",
     "firebase-tools": "6.10.0",
-    "friendly-errors-webpack-plugin": "1.7.0",
-    "graphql": "14.3.1",
-    "graphql-tag": "2.10.1",
-    "html-webpack-plugin": "3.2.0",
-    "html-webpack-template": "6.2.0",
-    "jquery": "3.4.1",
-    "marked": "0.6.2",
-    "moment": "2.24.0",
-    "node-sass": "4.12.0",
-    "nodemon": "1.19.0",
-    "popper.js": "1.15.0",
-    "postcss-loader": "3.0.0",
-    "prerender-spa-plugin": "3.4.0",
-    "pug": "2.0.3",
-    "pug-plain-loader": "1.0.0",
-    "rollup": "1.12.3",
-    "rollup-plugin-babel": "4.3.2",
-    "rollup-plugin-node-resolve": "5.0.0",
-    "rollup-plugin-progress": "1.1.1",
-    "rollup-plugin-string": "3.0.0",
-    "sass-loader": "7.1.0",
-    "style-loader": "0.23.1",
-    "subscriptions-transport-ws": "0.9.16",
-    "terser-webpack-plugin": "1.2.4",
-    "typescript": "3.4.5",
-    "vue": "2.6.10",
-    "vue-apollo": "3.0.0-beta.30",
-    "vue-class-component": "7.0.2",
-    "vue-loader": "15.7.0",
-    "vue-meta": "1.6.0",
-    "vue-property-decorator": "8.1.1",
-    "vue-router": "3.0.6",
-    "vue-template-compiler": "2.6.10",
-    "vuex": "3.1.1",
-    "vuex-class": "0.3.2",
-    "vuex-router-sync": "5.0.0",
-    "webpack": "4.32.2",
-    "webpack-cli": "3.3.2",
-    "webpack-dev-server": "3.4.1",
-    "whatwg-fetch": "3.0.0"
+    "lerna": "^3.14.1"
   }
 }
