--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
   "devDependencies": {
     "@playlyfe/gql": "2.6.1",
     "firebase-tools": "6.10.0",
-    "lerna": "^3.14.1"
+    "lerna": "3.14.1"
   }
 }
