--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -19,13 +19,13 @@
     "@babel/register": "7.4.4",
     "@starptech/prettyhtml": "0.9.0",
     "@types/marked": "0.6.5",
+    "@vue/babel-preset-jsx": "1.0.0",
     "autoprefixer": "9.5.1",
     "babel-loader": "8.0.6",
-    "babel-plugin-transform-vue-jsx": "4.0.1",
     "cheerio": "1.0.0-rc.3",
     "clean-webpack-plugin": "2.0.2",
     "css-loader": "2.1.1",
-    "extract-css-chunks-webpack-plugin": "4.5.1",
+    "extract-css-chunks-webpack-plugin": "4.5.2",
     "file-loader": "3.0.1",
     "friendly-errors-webpack-plugin": "1.7.0",
     "html-webpack-plugin": "3.2.0",
@@ -39,7 +39,7 @@
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.3.0",
-    "typescript": "3.4.5",
+    "typescript": "3.5.1",
     "vue-loader": "15.7.0",
     "vue-template-compiler": "2.6.10",
     "webpack": "4.32.2",
@@ -48,14 +48,14 @@
   },
   "dependencies": {
     "@babel/runtime-corejs3": "7.4.5",
-    "@types/graphql": "^14.2.0",
+    "@types/graphql": "14.2.0",
+    "@vue/babel-helper-vue-jsx-merge-props": "1.0.0",
     "apollo-boost": "0.4.0",
     "apollo-client": "2.6.0",
-    "babel-helper-vue-jsx-merge-props": "2.0.3",
     "bootstrap": "4.3.1",
-    "core-js": "3.1.2",
-    "element-theme-chalk": "2.8.2",
-    "element-ui": "2.8.2",
+    "core-js": "3.1.3",
+    "element-theme-chalk": "2.9.0",
+    "element-ui": "2.9.0",
     "graphql": "14.3.1",
     "graphql-tag": "2.10.1",
     "jquery": "3.4.1",
