--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -15,23 +15,23 @@
     "@babel/preset-typescript": "7.3.3",
     "@kocal/rollup-plugin-graphql": "1.0.0",
     "@types/graphql": "14.2.0",
-    "@yelo/rollup-node-external": "^1.0.1",
+    "@yelo/rollup-node-external": "1.0.1",
     "firebase-functions-test": "0.1.6",
     "grpc": "1.21.1",
-    "rollup": "^1.12.3",
+    "rollup": "1.12.5",
     "rollup-plugin-babel": "4.3.2",
+    "rollup-plugin-generate-package-json": "3.1.2",
     "rollup-plugin-node-resolve": "5.0.0",
     "rollup-plugin-progress": "1.1.1"
   },
   "dependencies": {
     "@babel/runtime-corejs3": "7.4.5",
-    "@google-cloud/firestore": "2.0.0",
+    "@google-cloud/firestore": "2.1.0",
     "apollo-server-express": "2.5.0",
     "express": "4.17.1",
     "firebase-admin": "8.0.0",
     "firebase-functions": "2.3.1",
     "graphql": "14.3.1",
-    "rollup-plugin-generate-package-json": "^3.1.2",
     "source-map-support": "0.5.12"
   }
 }
