Update deps, Add graphql-voyager

--- a/firebase.json
+++ b/firebase.json
@@ -11,6 +11,10 @@
         "function": "graphql"
       },
       {
+        "source": "/voyager",
+        "function": "voyager"
+      },
+      {
         "source": "**",
         "destination": "/__index.html"
       }
