--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -7,26 +7,26 @@
     "dev-server": "webpack-dev-server --progress"
   },
   "devDependencies": {
-    "@babel/core": "7.4.5",
-    "@babel/plugin-proposal-class-properties": "7.4.4",
+    "@babel/core": "7.5.4",
+    "@babel/plugin-proposal-class-properties": "7.5.0",
     "@babel/plugin-proposal-decorators": "7.4.4",
-    "@babel/plugin-proposal-object-rest-spread": "7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "7.5.4",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-syntax-jsx": "7.2.0",
-    "@babel/plugin-transform-runtime": "7.4.4",
-    "@babel/preset-env": "7.4.5",
+    "@babel/plugin-transform-runtime": "7.5.0",
+    "@babel/preset-env": "7.5.4",
     "@babel/preset-typescript": "7.3.3",
     "@babel/register": "7.4.4",
-    "@starptech/prettyhtml": "0.9.0",
+    "@starptech/prettyhtml": "0.10.0",
     "@types/marked": "0.6.5",
     "@vue/babel-preset-jsx": "1.0.0",
-    "autoprefixer": "9.6.0",
+    "autoprefixer": "9.6.1",
     "babel-loader": "8.0.6",
     "babel-plugin-transform-typescript-metadata": "0.2.2",
     "cheerio": "1.0.0-rc.3",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "3.0.0",
-    "extract-css-chunks-webpack-plugin": "4.5.2",
+    "extract-css-chunks-webpack-plugin": "4.5.5",
     "file-loader": "4.0.0",
     "friendly-errors-webpack-plugin": "1.7.0",
     "html-webpack-plugin": "3.2.0",
@@ -35,38 +35,38 @@
     "node-sass": "4.12.0",
     "postcss-loader": "3.0.0",
     "prerender-spa-plugin": "3.4.0",
-    "pug": "2.0.3",
+    "pug": "2.0.4",
     "pug-plain-loader": "1.0.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.3.0",
-    "typescript": "3.5.2",
+    "typescript": "3.5.3",
     "vue-loader": "15.7.0",
     "vue-template-compiler": "2.6.10",
-    "webpack": "4.34.0",
-    "webpack-cli": "3.3.4",
-    "webpack-dev-server": "3.7.1"
+    "webpack": "4.35.3",
+    "webpack-cli": "3.3.5",
+    "webpack-dev-server": "3.7.2"
   },
   "dependencies": {
-    "@babel/runtime-corejs3": "7.4.5",
+    "@babel/runtime-corejs3": "7.5.4",
     "@vue-decorators/all": "1.5.0",
     "@vue/babel-helper-vue-jsx-merge-props": "1.0.0",
-    "apollo-boost": "0.4.2",
-    "apollo-client": "2.6.2",
+    "apollo-boost": "0.4.3",
+    "apollo-client": "2.6.3",
     "bootstrap": "4.3.1",
-    "core-js": "3.1.3",
-    "element-theme-chalk": "2.9.1",
-    "element-ui": "2.9.1",
-    "graphql": "14.3.1",
+    "core-js": "3.1.4",
+    "element-theme-chalk": "2.10.1",
+    "element-ui": "2.10.1",
+    "graphql": "14.4.2",
     "graphql-tag": "2.10.1",
     "jquery": "3.4.1",
-    "marked": "0.6.2",
+    "marked": "0.7.0",
     "moment": "2.24.0",
     "popper.js": "1.15.0",
     "vue": "2.6.10",
-    "vue-apollo": "3.0.0-beta.30",
-    "vue-meta": "2.0.3",
-    "vue-router": "3.0.6",
+    "vue-apollo": "3.0.0-rc.1",
+    "vue-meta": "2.0.4",
+    "vue-router": "3.0.7",
     "vuex": "3.1.1",
     "vuex-router-sync": "5.0.0",
     "whatwg-fetch": "3.0.0"
