--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,32 +6,33 @@
     "build": "rollup -c"
   },
   "devDependencies": {
-    "@babel/core": "7.4.5",
-    "@babel/plugin-proposal-class-properties": "7.4.4",
+    "@babel/core": "7.5.4",
+    "@babel/plugin-proposal-class-properties": "7.5.0",
     "@babel/plugin-proposal-decorators": "7.4.4",
-    "@babel/plugin-proposal-object-rest-spread": "7.4.4",
-    "@babel/plugin-transform-runtime": "7.4.4",
-    "@babel/preset-env": "7.4.5",
+    "@babel/plugin-proposal-object-rest-spread": "7.5.4",
+    "@babel/plugin-transform-runtime": "7.5.0",
+    "@babel/preset-env": "7.5.4",
     "@babel/preset-typescript": "7.3.3",
     "@kocal/rollup-plugin-graphql": "1.0.0",
-    "@types/graphql": "14.2.0",
+    "@types/graphql": "14.2.2",
     "@yelo/rollup-node-external": "1.0.1",
     "firebase-functions-test": "0.1.6",
-    "grpc": "1.21.1",
-    "rollup": "1.15.5",
-    "rollup-plugin-babel": "4.3.2",
+    "grpc": "1.22.2",
+    "rollup": "1.16.7",
+    "rollup-plugin-babel": "4.3.3",
     "rollup-plugin-generate-package-json": "3.1.3",
-    "rollup-plugin-node-resolve": "5.0.2",
+    "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-progress": "1.1.1"
   },
   "dependencies": {
-    "@babel/runtime-corejs3": "7.4.5",
-    "@google-cloud/firestore": "2.2.1",
-    "apollo-server-express": "2.6.3",
+    "@babel/runtime-corejs3": "7.5.4",
+    "@google-cloud/firestore": "2.2.4",
+    "apollo-server-express": "2.6.8",
     "express": "4.17.1",
-    "firebase-admin": "8.1.0",
-    "firebase-functions": "3.0.1",
-    "graphql": "14.3.1",
+    "firebase-admin": "8.2.0",
+    "firebase-functions": "3.1.0",
+    "graphql": "14.4.2",
+    "graphql-voyager": "1.0.0-rc.27",
     "source-map-support": "0.5.12"
   }
 }
